# skystore-pro-engine

./: .env.sample  .gitignore  README.md  catalog_fixture.json  dump.rdb  manage.py  product_moderators_fixture.json  pyproject.toml  requirements.txt
Django/: settings.py  urls.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogentry_number_of_views.py  0003_alter_blogentry_preview.py  0004_alter_blogentry_preview.py  0005_alter_blogentry_preview.py  0006_alter_blogentry_publication_sign.py
blog/templates/blog/: blog_create.html  blog_delete.html  blog_detail.html  blog_list.html  blog_update.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_product_publication_sign.py  0004_alter_product_options.py  0005_product_owner.py
catalog/templates/catalog/: base.html  contacts.html  home.html  home_page.html  product_category.html  product_create.html  product_delete.html  product_detail.html  product_list.html  product_update.html
catalog/templates/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_country.py  0003_alter_user_username.py
users/templates/: login.html
users/templates/users/: user_form.html
